2007-01-23 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* LICENSE: Update copyright year.
	* doc/api/main_page.dox: Include copyright notice into
	documentation.

2007-01-21 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iomxx4.h: Clarify a confusing comment that all the
	picopower devices covered by this file feature a second USART.

2007-01-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/largedemo/largedemo.c: Port the "largedemo" to
	the ATtiny2313.
	* doc/examples/largedemo/largedemo.dox: Describe the ATtiny2313
	port.
	* doc/examples/largedemo/Makefile: Add a MCU_TARGET hint for
	the ATtiny2313.

2007-01-18 Anatoly Sokolov <aesok@post.ru>

	* common/macros.inc (__AVR_HAVE_MUL__): Define.
	* libc/misc/mul10.S (__mulhi_const_10): Use __AVR_HAVE_MUL__ instead
	of __AVR_ENHANCED__.

2007-01-15  Dmitry Xmelkov  <dmix@gmail.ru>

	* devtools/table.tar.bz2: New file. This is a test tarball of
	float point functions, table mode test. This is a temporary
	variant, so it is a tarball. See 'table/tst-all.sh' for run
	instruction.

2007-01-14 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the AT90PWM1 support.
	* devtools/gen-avr-lib-tree.sh: Add support for AT90PWM1 device.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/io90pwm1.h: new file.
	* include/avr/Makefile.am: include new file.
	* doc/api/main_page.dox: Document support for AT90PWM1 device.
	* doc/api/using-tools.dox: (Ditto.)

2007-01-14  Dmitry Xmelkov  <dmix@gmail.ru>

	* bootstrap: Version 2.60 for autoconf is added.

	New version of math library:
	* libm/fplib/{dtostre.S,dtostrf.S,fp_cosinus.S,fp_flashconst.S,
	fp_inverse.S,fp_m_inf.S,fp_merge.S,fp_p_inf.S,fp_powerseries.S,
	fp_split.S,fplib.inc,isinfnan.S,readme.dtostre,readme.fplib,
	readme.strtod,strtod.S}: Removed.
	* libm/fplib/{asmdef.h,copysign.S,fdim.S,fixsfdi.S,floatdisf.S,
	floatunsdisf.S,fma.S,fmax.S,fmin.S,fp32def.h,fp_arccos.S,fp_inf.S,