@@ -554,7 +554,7 @@
 #define SIG_OUTPUT_COMPARE1B		_VECTOR(12)
 #define SIG_TIMER1_COMPB		_VECTOR(12)
 #define TIMER0_COMPA_vect		_VECTOR(13)
-#define SIG_OUTPUT_COMPARE0A		_VECTOR(13)
+#define SIG_OUTPUT_COPMARE0A		_VECTOR(13)
 #define SIG_TIMER0_COMPA		_VECTOR(13)
 #define TIMER0_COMPB_vect		_VECTOR(14)
 #define SIG_OUTPUT_COMPARE0B		_VECTOR(14)
